[package]
name = "bluetooth"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core_bluetooth = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
rumble = { path = "../rumble" }
